[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/MainMenu_Background.png" type="Texture" id=2]
[ext_resource path="res://ui/DynamicFont.tres" type="DynamicFont" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu_Background" type="Sprite" parent="."]
position = Vector2( 319.974, 180.413 )
scale = Vector2( 0.500231, 0.500411 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.3929
margin_top = 18.5842
margin_right = 41.6071
margin_bottom = 139.584
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
margin_right = 84.0
margin_bottom = 23.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../LoadGameButton")
custom_fonts/font = ExtResource( 3 )
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 84.0
margin_bottom = 50.0
focus_neighbour_top = NodePath("../NewGameButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
custom_fonts/font = ExtResource( 3 )
text = "Load Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 84.0
margin_bottom = 77.0
focus_neighbour_top = NodePath("../LoadGameButton")
focus_neighbour_bottom = NodePath("../QuitButton")
custom_fonts/font = ExtResource( 3 )
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 84.0
margin_bottom = 104.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../NewGameButton")
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
